
# 2013-06-22
- Added custom map pin image creation with ImageMagick (pins are saved to
  web/uploads/event_images/pins/%event_id.png)
- Incorporated basic pagination logic
- Added support for categories display (book view, single event view)



# 2013-06-21
- Added working image code for events (creating, editing, listing, single
  event view, user's own events view)
- Completely removed event deletion by user (as suggested)
- Added few sanity checks in event editing methods (checking if user is logged
  in)
- Added working image code for organisers (creating, editing, single event
  view)
- Added few good and bad flash messages (event saving, organiser saving)
- Some (sadly failish) coding around the time pagination