@@ -7,4 +7,5 @@
  <li><a href="<?=url_for('apitests/eventlistattendees?id=6586499397')?>">event_list_attendees</a></li>
  <li><a href="<?=url_for('apitests/me')?>">user_get</a></li>
  <li><a href="<?=url_for('apitests/userlistevents')?>">user_list_events</a></li>
+ <li><a href="<?=url_for('apitests/userlisttickets')?>">user_list_tickets</a></li>
 </ul>
