@@ -1,0 +1,5 @@
+<p>Tickets for current user:</p>
+
+<pre>
+<?=print_r($tickets)?>
+</pre>
