@@ -4,6 +4,9 @@
   web/uploads/event_images/pins/%event_id.png)
 - Incorporated basic pagination logic
 - Added support for categories display (book view, single event view)
+- When hosting, the imported list of events will now be filtered by
+  app_satellites_date +/- 24h
+- Some changes and researching around "main ticket" bug
 
 
 
